@startuml
' Диаграмма классов BudgetTracker

class FinanceRecord {
    - Guid Id
    - string Type
    - decimal Amount
    - DateTime Date
    - string Category
    - string Description
    + ToString() : string
}

class StorageModule {
    - string _filePath
    - JsonSerializerOptions _options
    + StorageModule(fileName)
    + Load() : List<FinanceRecord>
    + Save(records)
    + GetFilePath() : string
}

class BusinessLogicModule {
    + GetBalance(records) : decimal
    + GetTotalByType(records, type, days) : decimal
    + GetExpensesByCategory(records, days) : Dictionary<string, decimal>
    + GetStatistics(records) : (decimal, decimal, decimal, decimal)
    + FilterByCategory(records, category) : List<FinanceRecord>
    + FilterByType(records, type) : List<FinanceRecord>
}

class UiModule {
    + ShowMenu()
    + ReadRecordFromUser() : FinanceRecord
    + DisplayRecords(records)
    + DisplayReport(balance, income, expense, categories)
    + DisplayStatistics(records)
    + SelectRecordForAction(records, action) : int
    + ShowFilePath(filePath)
    + ExportToCsv(records)
}

class Program {
    + Main()
}

Program --> StorageModule
Program --> BusinessLogicModule
Program --> UiModule

StorageModule ..> FinanceRecord : использует
BusinessLogicModule ..> FinanceRecord : использует
UiModule ..> FinanceRecord : использует

note top of FinanceRecord
  Модель данных
  Представляет одну
  финансовую запись
end note

note top of StorageModule
  Отвечает за:
  - Чтение из JSON
  - Запись в JSON
  - Определение пути
end note

note top of BusinessLogicModule
  Отвечает за:
  - Расчет баланса
  - Фильтрацию
  - Статистику
end note

note top of UiModule
  Отвечает за:
  - Ввод данных
  - Вывод данных
  - Валидацию
end note
@enduml